codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__security_setup_tests__security_setup_dismissed_after_usage.snap
---
source: tui/src/chatwidget/tests/security_setup_tests.rs
expression: rendered
---
› Ask Ore to do anything

  test-model-a default · /tmp/project
